:art: [#10] changed publisher to dict field, updated uuid types to string in api, cleaned up the way we send data to es, altered the document
