# src/woo_search/search_index/api/viewsets/publications.py
@@ -1,6 +1,5 @@
 from django.utils.translation import gettext_lazy as _
 
-from dateutil import parser
 from drf_spectacular.utils import extend_schema, extend_schema_view
 from rest_framework import status, viewsets
 from rest_framework.response import Response
@@ -25,14 +24,21 @@ class DocumentViewSet(viewsets.ViewSet):
     def create(self, request):
         serializer = self.serializer_class(data=request.data)
         serializer.is_valid(raise_exception=True)
-        es_data = self._parsed_es_data(serializer.data)
-        save_document_task = index_document.delay(es_data)
+
+        validated_data: DocumentType = serializer.validated_data
+        save_document_task = index_document.delay(
+            uuid=validated_data["uuid"],
+            publicatie=validated_data["publicatie"],
+            publisher=validated_data["publisher"],
+            identifier=validated_data["identifier"],
+            officiele_titel=validated_data["officiele_titel"],
+            verkorte_titel=validated_data["verkorte_titel"],
+            omschrijving=validated_data["omschrijving"],
+            creatiedatum=validated_data["creatiedatum"],
+            registratiedatum=validated_data["registratiedatum"],
+            laatst_gewijzigd_datum=validated_data["laatst_gewijzigd_datum"],
+        )
+
         return Response(
             data={"task_id": save_document_task.id}, status=status.HTTP_202_ACCEPTED
         )
-
-    def _parsed_es_data(self, data) -> DocumentType:
-        data["creatiedatum"] = parser.parse(data["creatiedatum"])
-        data["registratiedatum"] = parser.parse(data["registratiedatum"])
-        data["laatst_gewijzigd_datum"] = parser.parse(data["laatst_gewijzigd_datum"])
-        return data
